fet(#565): implementing MundBlazor to style components and style navigation

--- a/frontend/LTS-Blazor/LTS.BLZ/LTS.Erp/Shared/NavMenu.razor
+++ b/frontend/LTS-Blazor/LTS.BLZ/LTS.Erp/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">LTS.Erp</a>
+    <a class="navbar-brand" href="">LTS.App</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,13 +13,23 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="adms">
+                <span class="oi oi-plus" aria-hidden="true"></span> Administrativo
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="fhs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Financeiro
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="msth4">
+                <span class="oi oi-list-rich" arial-hidden="true"></span> Contabilidade
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="flf743">
+                <span class="oi oi-list-rich" arial-hidden="true"></span> TI
             </NavLink>
         </li>
     </ul>
