fet(#572): adjusting components

--- a/frontend/LTS-Tripe/LTS.Erp/Client/Pages/Accounting.razor
+++ b/frontend/LTS-Tripe/LTS.Erp/Client/Pages/Accounting.razor
@@ -1,6 +1,6 @@
-﻿@page "/counter"
+﻿@page "/accounting"
 
-<h1>Counter</h1>
+<h1>Contabilidade da nossa empresa</h1>
 
 <p>Current count: @currentCount</p>
 
