fet(#599): implementing Blazor basic structure

--- a/source/frontend/LucasTechnologyServices.ErpBlazor/Shared/NavMenu.razor
+++ b/source/frontend/LucasTechnologyServices.ErpBlazor/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">LucasTechnologyServices.ErpBlazor</a>
+    <a class="navbar-brand" href="">Lucas Technology Services</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,20 +13,63 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="adms">
+                <span class="oi oi-plus" aria-hidden="true"></span> Administrativo
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="financial" @onclick="()=> expandirSubMenu =! expandirSubMenu">
+                <span class="oi oi-graph" aria-hidden="true"></span> Financeiro
             </NavLink>
+            @if (expandirSubMenu)
+            {
+                <ul class="nav flex-column">
+                    <li class="nav-item px-3">
+                        <NavLink class="expand-menu" href="financial/paymentsschedule">
+                            <span class="oi oi-bar-chart" aria-hidden="true"></span> Pagamentos
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="expand-menu" href="financial/bankpannel">
+                            <span class="oi oi-pie-chart" aria-hidden="true"></span> Bancos
+                        </NavLink>
+                    </li>
+                </ul>
+            }
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="accounting" @onclick="()=> expandirSubMenu =! expandirSubMenu">
+                <span class="oi oi-graph" aria-hidden="true"></span> Contabilidade
+            </NavLink>
+            @if (expandirSubMenu)
+            {
+                <ul class="nav flex-column">
+                    <li class="nav-item px-3">
+                        <NavLink class="expand-menu" href="accounting/bnt">
+                            <span class="oi oi-bar-chart" aria-hidden="true"></span> Balancete
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="expand-menu" href="accounting/io">
+                            <span class="oi oi-pie-chart" aria-hidden="true"></span> Ativos
+                        </NavLink>
+                    </li>
+                </ul>
+            }
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="it" @onclick="()=> expandirSubMenu =! expandirSubMenu">
+                <span class="oi oi-graph" aria-hidden="true"></span> TI
+            </NavLink>
+
+        </li>
+
     </ul>
 </div>
 
 @code {
     private bool collapseNavMenu = true;
+    private bool expandirSubMenu;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
