--- a/source/frontend/LucasTechnologyServices.ErpBlazor/Pages/Accounting.razor
+++ b/source/frontend/LucasTechnologyServices.ErpBlazor/Pages/Accounting.razor
@@ -1,6 +1,6 @@
-﻿@page "/counter"
+﻿@page "/accounting"
 
-<h1>Counter</h1>
+<h1>Contabilidade da nossa empresa</h1>
 
 <p>Current count: @currentCount</p>
 
