--- a/source/frontend/LucasTechnologyServices.ErpBlazor/Shared/NavMenu.razor
+++ b/source/frontend/LucasTechnologyServices.ErpBlazor/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="financial" @onclick="()=> expandirSubMenu =! expandirSubMenu">
+            <NavLink class="nav-link" href="finanac" @onclick="()=> expandirSubMenu =! expandirSubMenu">
                 <span class="oi oi-graph" aria-hidden="true"></span> Financeiro
             </NavLink>
             @if (expandirSubMenu)
